<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".A_deposito">

    <TextView
        android:id="@+id/txt_quinto"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_1"
        android:gravity="center"
        android:text="@string/tv_quinto"
        android:textColor="#BDBDBD"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cuarto" />

    <EditText
        android:id="@+id/txt_otro"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txt_otro"
        android:inputType="numberDecimal"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_quinto" />

    <TextView
        android:id="@+id/txt_primero"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/border_1"
        android:gravity="center"
        android:text="@string/tv_primero"
        android:textColor="#BDBDBD"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cantidad" />

    <TextView
        android:id="@+id/txt_segundo"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_1"
        android:gravity="center"
        android:text="@string/tv_segundo"
        android:textColor="#BDBDBD"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_primero" />

    <TextView
        android:id="@+id/txt_cuarto"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_1"
        android:gravity="center"
        android:text="@string/tv_cuarto"
        android:textColor="#BDBDBD"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tercero" />

    <TextView
        android:id="@+id/txt_tercero"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_1"
        android:gravity="center"
        android:text="@string/tv_tercero"
        android:textColor="#BDBDBD"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_segundo" />

    <Button
        android:id="@+id/btn_confirmar"
        style="@style/MyButtonStyle"
        android:layout_width="206dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:onClick="confirmar"
        android:text="@string/btn_confirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_otro" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_deposito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:title="@string/tb_saldo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/txt_deposito"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_deposito" />

</androidx.constraintlayout.widget.ConstraintLayout>