<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:text="@string/txt_titulo"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_validar"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="141dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:onClick="validar"
        android:text="@string/btn_validar"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pass" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="137dp"
        android:layout_height="95dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_validar"
        app:srcCompat="@mipmap/logo_app_round" />

    <EditText
        android:id="@+id/txt_pass"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txt_pass"
        android:textSize="20dp"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_user" />

    <EditText
        android:id="@+id/txt_user"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txt_usser"
        android:inputType="number"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo" />
</androidx.constraintlayout.widget.ConstraintLayout>