<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista_2">

    <TextView
        android:id="@+id/txt_usuario"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_consultar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:onClick="Ver_saldo"
        android:text="@string/btn_saldo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario" />

    <Button
        android:id="@+id/btn_depositar"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:onClick="Ingresar_dinero"
        android:text="@string/btn_deposito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_consultar" />

    <Button
        android:id="@+id/btn_salir"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:onClick="salir"
        android:text="@string/btn_salir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_retirar" />

    <Button
        android:id="@+id/btn_retirar"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:onClick="Retirar_dinero"
        android:text="@string/btn_retiro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_depositar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="176dp"
        android:layout_height="129dp"
        android:layout_marginTop="28dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_salir"
        app:srcCompat="@mipmap/logo_app_round" />

</androidx.constraintlayout.widget.ConstraintLayout>